# infra

./: .Rbuildignore  .nojekyll  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  README.md  _quarto.yml  index.html  index.qmd  install-local.sh  install.html  install.ps1  install.qmd  pyproject.toml  reference.html  reference.qmd  robots.txt  search.json  sitemap.xml  uninstall-local.sh
.github/workflows/: quarto-publish.yml  version-and-release.yml
R/: wrappers.R
debian/: changelog  control  copyright  infra.sh  rules
homebrew/: README.md  infra.rb
scoop/: README.md  infra.json
scripts/: install-repos.sh  setup.sh
scripts/helper/: create-devcontainer.sh  create-gha.sh  create-readme.sh  create-repos-list.sh
src/infra/: __init__.py
templates/devcontainers/: bioconductor.json  prebuild.json  python.json  rocker.json
templates/dockerfiles/: Dockerfile.bioconductor  Dockerfile.python  Dockerfile.rocker
templates/gha/: prebuild-devcontainer.yml
