[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra"
version = "1.0.0"
description = "Project infrastructure setup utility"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Miguel Rodo", email = "miguel.rodo@uct.ac.za"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development",
]
keywords = ["devcontainer", "infrastructure", "project-setup", "git", "repository"]

[project.urls]
Homepage = "https://github.com/MiguelRodo/infra"
Repository = "https://github.com/MiguelRodo/infra"
Issues = "https://github.com/MiguelRodo/infra/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
infra = ["scripts/**/*", "scripts/helper/**/*"]
